delete: LostPoliceVO삭제, mypage html 수정